# fathom.rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
fathom-syzygy/: Cargo.toml  README.md
fathom-syzygy-sys/: .gitignore  Cargo.toml  README.md  build.rs
fathom-syzygy-sys/src/: lib.rs
fathom-syzygy/src/: lib.rs
fathom-syzygy/tests/: test_drop_safety.rs
