[package]
name = "fathom-syzygy-sys"
version = "0.1.0"
authors = ["Maximilian Lupke <maxlupke@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/malu/fathom-syzygy"
description = "Low-level Rust bindings to the fathom library for Syzygy Tablebases"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
